[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -9.0
margin_top = 21.0
margin_right = -9.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 353.0
margin_top = 225.0
margin_right = 671.0
margin_bottom = 375.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 318.0
margin_bottom = 14.0
text = "Mijocraft Server"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 318.0
margin_bottom = 86.0
custom_constants/vseparation = 9
custom_constants/hseparation = 5
columns = 2

[node name="portText" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
text = "Port to host on:"
align = 2

[node name="port" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )

[node name="maxPlayersText" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 38.0
margin_right = 99.0
margin_bottom = 52.0
text = "Max Players:"
align = 2

[node name="maxPlayers" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 104.0
margin_top = 33.0
margin_right = 304.0
margin_bottom = 57.0

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 318.0
margin_bottom = 115.0
text = "The server will automatically use the localhost IP."
align = 1
valign = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 318.0
margin_bottom = 150.0
text = "Start Server"

[node name="playerListText" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 165.0
margin_right = 318.0
margin_bottom = 179.0
text = "Connected Players:"
align = 1
valign = 1

[node name="playerList" type="ItemList" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 165.0
margin_right = 318.0
margin_bottom = 365.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="CenterContainer/VBoxContainer/GridContainer/port" to="." method="_on_port_text_entered"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/GridContainer/maxPlayers" to="." method="_on_maxPlayers_text_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
